# dotslash_fixtures

./: Cargo.toml  README.md  broken_shebang  build.sh  exit_code.rs  exit_code.zig  pack.tar  pack.tar.xz  pack.tar.zst  print_args.rs  print_args.zig  print_argv.bat  print_argv.linux.aarch64  print_argv.linux.aarch64.xz  print_argv.linux.aarch64.zst  print_argv.linux.x86_64  print_argv.linux.x86_64.xz  print_argv.linux.x86_64.zst  print_argv.macos.aarch64  print_argv.macos.aarch64.xz  print_argv.macos.aarch64.zst  print_argv.macos.x86_64  print_argv.macos.x86_64.xz  print_argv.macos.x86_64.zst  print_argv.rs  print_argv.sh  print_argv.windows.aarch64.exe.xz  print_argv.windows.aarch64.exe.zst  print_argv.windows.x86_64.exe.xz  print_argv.windows.x86_64.exe.zst  print_argv.zig  stdin_to_stderr.rs  stdin_to_stderr.zig  stdin_to_stdout.rs  stdin_to_stdout.zig
